title, clickable links

--- a/basic_use_laptops.html
+++ b/basic_use_laptops.html
@@ -4,17 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SUGGESTMEE</title>
+    <title>SUGGESTMEE : Best Daily Use Laptops</title>
+    <!---icon image-->
+    <link
+      rel="suggestmee-icon"
+      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.png"
+    />
+
+    <!----Meta-------->
     <meta
       name="keywords"
-      content="Computers & Electronics, Laptops, Dell XPS, Acer Predator Triton 300 SE, Alienware, Apple MacBook Air,Lenovo ThinkPad X1 Carbon Gen 9 (2021),HP Spectre x360 14, Dell Inspiron, Dell Precision 5560, Lenovo IdeaPad 3 14"
+      content="best laptops,2022,programming laptops,gaming laptops,basic purpose laptops,core i5,i3,i7,Ram,USB Type-C,Higher-Resolution Screens,OLED Displays,Nvidia Graphics,display full hd, daily use, Laptops, Dell XPS Alienware,Lenovo ThinkPad X1 Carbon Gen 9 (2022),HP Spectre, Dell Inspiron, Dell Precision, Lenovo IdeaPad"
     />
     <meta
       name="description"
-      content="There are so many Laptops in every category, from ultrabook to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop."
+      content="the best budget laptops which are reviewed and tested by experts to help you choose ideal system"
     />
     <meta name="author" content="Suggestmee" />
     <meta http-equiv="Content-Type" content="text/html; charset = UTF-8" />
+
+    <!-- Open Graph -->
+    <meta property="fb:app_id" content="106460971998723" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://suggestmee.github.io/basic_use_laptops.html"
+    />
+    <meta property="og:title" content="suggestmee : Daily Use Laptops" />
+    <meta property="og:description" content="Helps to choose Best from Rest" />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/facebook/display-1.jpg"
+    />
+    <!---Css Style-->
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -107,7 +130,7 @@
             href="https://www.hp.com/in-en/shop/laptops-tablets/hp-laptop-15s-fq2626tu-536c2pa.html"
             class="btn"
             target="_blank"
-            >BUY</a
+            >BUY NOW</a
           >
         </div>
       </div>
@@ -175,7 +198,7 @@
             href="https://www.lenovo.com/in/en/laptops/thinkpad/thinkpad-e-series/E14-G2/p/20TAS12L00"
             class="btn"
             target="_blank"
-            >BUY</a
+            >BUY NOW</a
           >
         </div>
       </div>
