--- a/gamming_laptops.html
+++ b/gamming_laptops.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SUGGESTMEE</title>
-    <meta name = "keywords" content = "Computers & Electronics, Laptops, Dell XPS, Acer Predator Triton 300 SE, Alienware, Apple MacBook Air,Lenovo ThinkPad X1 Carbon Gen 9 (2021),HP Spectre x360 14, Dell Inspiron, Dell Precision 5560, Lenovo IdeaPad 3 14" />
-    <meta name = "description" content = "There are so many Laptops in every category, from ultrabook to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop." />
+    <title>SUGGESTMEE : Best Gamming Laptops</title>
+
+    <!---icon image-->
+    <link rel="suggestmee-icon" href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.png" />
+
+    <!----META----------->
+    <meta name = "keywords" content = "best laptops,2022,programming laptops,gaming laptops,basic purpose laptops,core i5,i3,i7,Ram,USB Type-C,Higher-Resolution Screens,OLED Displays,Nvidia Graphics,display full hd, daily use, Laptops, Dell XPS Alienware,Lenovo ThinkPad X1 Carbon Gen 9 (2022),HP Spectre, Dell Inspiron, Dell Precision, Lenovo IdeaPad" />
+    <meta name = "description" content = "The best gamming with Power, excellent design,portability." />
     <meta name = "author" content = "Suggestmee" />
     <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8" />
     <link rel="stylesheet" href="./style.css" />
+
+    <!-- Open Graph -->
+    <meta property="fb:app_id" content="106460971998723">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://suggestmee.github.io/gamming_laptops.html" />
+    <meta property="og:title" content="suggestmee : Best Gamming Laptops" />
+    <meta property="og:description" content="Helps to choose Best from Rest" />
+    <meta property="og:image" itemprop="image" content="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/facebook/display-3.jpg" />
+    <!-----CSS Style-->
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -101,12 +115,12 @@
             <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p> 
             <p><b>Display :</b> 15.6 inch FHD (1920 x 1080) 120Hz 250 nits
               WVA Anti- Glare LED Backlit Narrow Border Display</p> 
-            <p><b>price :</b>79,990.01</p> 
+            <p><b>MRP :</b>79,990.01</p> 
           </p>
           <a
             href="https://www.dell.com/en-in/shop/gaming-and-games/g15-gaming-laptop/spd/g-series-15-5510-laptop/d560537win9b#features_section
             " class="btn" target="_blank"
-            >BUY</a
+            >BUY NOW</a
           >
         </div>
       </div>
@@ -173,7 +187,7 @@
           <a
             href="https://www.lenovo.com/in/en/laptops/legion-laptops/legion-5-series/Legion-5-15ACH6H/p/88GMY501582?r"
             class="btn" target="_blank"
-            >BUY</a
+            >BUY NOW</a
           >
         </div>
       </div>
