--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUGGESTMEE : Electronic Appliance Advice</title>
     <!---icon image-->
-    <link rel="suggestmee-icon" href="./images/fevicon_logo.png" />
+    <link
+      rel="suggestmee-icon"
+      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.png"
+    />
     <!---Meta Tags-->
     <meta
       name="keywords"
@@ -19,6 +22,7 @@
     <meta name="author" content="Suggestmee" />
     <meta http-equiv="Content-Type" content="text/html; charset = UTF-8" />
     <!-- Open Graph -->
+    <meta property="fb:app_id" content="106460971998723" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://suggestmee.github.io/" />
     <meta
@@ -29,8 +33,10 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="./images/whatsapp_logo.png"
+      content="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/whatsapp_logo.png"
     />
+
+    <!--CSS Style-->
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
