--- a/programming_laptops.html
+++ b/programming_laptops.html
@@ -4,17 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SUGGESTMEE</title>
+    <title>SUGGESTMEE : Best Programming Laptops</title>
+    <!---icon image-->
+    <link
+      rel="suggestmee-icon"
+      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.png"
+    />
+
+    <!---META-------->
     <meta
       name="keywords"
-      content="Computers & Electronics, Laptops, Dell XPS, Acer Predator Triton 300 SE, Alienware, Apple MacBook Air,Lenovo ThinkPad X1 Carbon Gen 9 (2021),HP Spectre x360 14, Dell Inspiron, Dell Precision 5560, Lenovo IdeaPad 3 14"
+      content="best laptops,2022,programming laptops,gaming laptops,basic purpose laptops,core i5,i3,i7,Ram,USB Type-C,Higher-Resolution Screens,OLED Displays,Nvidia Graphics,display full hd, daily use, Laptops, Dell XPS Alienware,Lenovo ThinkPad X1 Carbon Gen 9 (2022),HP Spectre, Dell Inspiron, Dell Precision, Lenovo IdeaPad"
     />
     <meta
       name="description"
-      content="There are so many Laptops in every category, from ultrabook to gaming laptops. Suggestmee reviewed hundreds of laptops to help you find the best laptop."
+      content="Suggestmee reviewed hundreds of Programming laptops,to cut down the time you spend compiling code"
     />
     <meta name="author" content="Suggestmee" />
     <meta http-equiv="Content-Type" content="text/html; charset = UTF-8" />
+
+    <!-- Open Graph --------->
+    <meta property="fb:app_id" content="106460971998723" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://suggestmee.github.io/programming_laptops.html"
+    />
+    <meta property="og:title" content="suggestmee : Best Programming Laptops" />
+    <meta property="og:description" content="Helps to choose Best from Rest" />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/facebook/display-2.jpg"
+    />
+
+    <!----CSS Style-->
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -114,7 +138,7 @@
             href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-14-laptop/spd/inspiron-14-5410-laptop/bts-icc-c782512win8"
             class="btn"
             target="_blank"
-            >BUY</a
+            >BUY NOW</a
           >
         </div>
       </div>
@@ -183,7 +207,7 @@
             href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-5i-15IIL05/p/88IPS501391"
             class="btn"
             target="_blank"
-            >BUY</a
+            >BUY NOW</a
           >
         </div>
       </div>
@@ -244,7 +268,7 @@
             href="https://www.hp.com/in-en/shop/hp-pavilion-laptop-14-dv1002tu-50n48pa.html"
             class="btn"
             target="_blank"
-            >BUY</a
+            >BUY NOW</a
           >
         </div>
       </div>
