--- a/basic_use_laptops.html
+++ b/basic_use_laptops.html
@@ -7,8 +7,9 @@
     <title>SUGGESTMEE : Best Daily Use Laptops</title>
     <!---icon image-->
     <link
-      rel="suggestmee-icon"
-      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.png"
+      rel="icon"
+      type="image/x-icon"
+      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.ico"
     />
 
     <!----Meta-------->
@@ -120,11 +121,11 @@
           <br />
           <p><b>Processor :</b> 11th Generation Intel® Core™ i3 processor</p>
           <p><b>Operating System :</b> Windows 11 Home</p>
-          <p><b>Storage : </b>256 GB PCIe® NVMe™ M.2 SSD</p>
+          <p><b>Graphics :</b> Intel UHD Graphics</p>
+          <p><b>RAM : </b> 8 GB DDR4-2666 MHz RAM (1 x 8 GB)</p>
+          <p><b>Storage : </b> 256 GB PCIe® NVMe™ M.2 SSD</p>
           <p><b>Display :</b> 39.62 cm (15.6) FHD</p>
-          <p><b>Graphics :</b>Intel UHD Graphics</p>
-          <p><b>RAM : </b>8 GB DDR4-2666 MHz RAM (1 x 8 GB)</p>
-          <p><b>MRP : </b>42499</p>
+          <p><b>MRP : </b> 40,699</p>
 
           <a
             href="https://www.hp.com/in-en/shop/laptops-tablets/hp-laptop-15s-fq2626tu-536c2pa.html"
@@ -177,8 +178,7 @@
           </div>
         </div>
         <div class="col-2">
-          <p>Home /</p>
-          <h1>Thinkpad E14 11th Gen (Intel)</h1>
+          <h1>IdeaPad Slim 3i Gen 6</h1>
           <h3>Product Details</h3>
           <br />
           <p>
@@ -186,16 +186,17 @@
             (2 Cores / 4 Threads, 3.00 GHz, up to 4.10 GHz with Turbo Boost, 6
             MB Cache)
           </p>
-          <p><b>Operating System :</b> Windows 11 Home Single Language 64</p>
-          <p>
-            <b>Display Type :</b> 35.56cms (14.0) FHD (1920x1080) TN 220 nits
-            Anti-glare LED Backlight Narrow Bezel Non-Touch
-          </p>
+          <p><b>Operating System :</b> Windows 11 Home 64</p>
+          <p><b>Graphics :</b> Integrated Intel® UHD Graphics</p>
           <p><b>RAM :</b> 8 GB SO-DIMM DDR4 3200MHz</p>
-          <p><b>Hard Drive :</b> 256 GB M.2 2242 SSD</p>
-          <p><b>MRP :</b> 49990</p>
+          <p><b>Storage :</b> 512 GB M.2 2280 SSD</p>
+          <p>
+            <b>Display :</b> 35.56cms (14) FHD (1920 x 1080), IPS,Anti-Glare,
+            Non-Touch, 300 Nits
+          </p>
+          <p><b>MRP :</b> 44,989</p>
           <a
-            href="https://www.lenovo.com/in/en/laptops/thinkpad/thinkpad-e-series/E14-G2/p/20TAS12L00"
+            href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-3i-Gen-6-14%E2%80%B3-Intel/p/82H700V2IN"
             class="btn"
             target="_blank"
             >BUY NOW</a
@@ -203,173 +204,77 @@
         </div>
       </div>
     </div>
-    <!-- -----single products details 3 ----- --><!-----
+
+    <!-- -----single products details 3 ----- -->
+
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/gallery-1.jpg" width="100%" id="productImg" />
+          <img src="./images/I3/gallery-9.jpg" width="100%" id="productImg2" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/gallery-1.jpg"
+                src="./images/I3/gallery-9.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg2"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/gallery-2.jpg"
+                src="./images/I3/gallery-10.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg2"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/gallery-3.jpg"
+                src="./images/I3/gallery-11.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg2"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/gallery-4.jpg"
+                src="./images/I3/gallery-12.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg2"
               />
             </div>
           </div>
         </div>
         <div class="col-2">
-          <p>Home /</p>
-          <h1>Red Printed T-shirt by HRX</h1>
-          <h3>Product Details <i class="fa fa-indent"></i></h3>
+          <h1>Inspiron 15 Laptop</h1>
+          <h3>Product Details</h3>
           <br />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            nesciunt quae consequuntur, et ea quo, ad in minima aliquam vel vero
-            nulla repudiandae dicta, unde quia quibusdam distinctio possimus
-            enim reprehenderit numquam porro delectus! Earum!
+            <b>Processor :</b> 11th Gen Intel® Core™ i3-1125G4 (8 MB cache, 4
+            cores, 8 threads, up to 3.70 GHz Turbo)
           </p>
+          <p>
+            <b>Operating System :</b> Windows 11 Home Single Language, English
+          </p>
+          <p><b>Graphics</b>Intel® UHD Graphics</p>
+          <p><b>RAM :</b> 8 GB, 1 x 8 GB, DDR4, 3200 MHz</p>
+          <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p>
+          <p>
+            <b>Display :</b> 15.6", FHD 1920x1080, 60Hz, Non-Touch, AG,WVA,
+            LED-Backlit, Narrow Border
+          </p>
+          <p><b>MRP :</b> 49,989</p>
+          <a
+            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-15-laptop/spd/inspiron-15-5510-laptop/bts-icc-c783501win8"
+            class="btn"
+            target="_blank"
+            >BUY NOW</a
+          >
         </div>
       </div>
-    </div>------>
-    <!-- -----title----- -->
-    <!--------
-    <div class="small-container">
-        <div class="row row-2">
-            <h2>Releted Products</h2>
-            <p>View More</p>
-        </div>
     </div>
-
-    <section>
-        <div class="small-container">
-            <div class="row">
-                <div class="col-4">
-                    <img src="./images/product-5.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-6.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-7.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-8.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <img src="./images/product-1.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-2.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-3.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-4.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-            </div>
-        </div>
-    </section> ------------->
+    <!-- -----single products details 3 ----- -->
 
     <!-- footer -->
 
@@ -386,7 +291,7 @@
               </div>
             </div>------->
             <div class="footer-col-2">
-              <img src="./images/logo.png" alt="" />
+              <a href="/"><img src="./images/logo.png" alt="" /></a>
               <p>Make your buying decision with us</p>
             </div>
             <!----<div class="footer-col-4">
@@ -452,6 +357,23 @@
       };
       smallImg1[3].onclick = function () {
         productImg1.src = smallImg1[3].src;
+      };
+    </script>
+    <script>
+      var productImg2 = document.getElementById("productImg2");
+      var smallImg2 = document.getElementsByClassName("smallImg2");
+
+      smallImg2[0].onclick = function () {
+        productImg2.src = smallImg2[0].src;
+      };
+      smallImg2[1].onclick = function () {
+        productImg2.src = smallImg2[1].src;
+      };
+      smallImg2[2].onclick = function () {
+        productImg2.src = smallImg2[2].src;
+      };
+      smallImg2[3].onclick = function () {
+        productImg2.src = smallImg2[3].src;
       };
     </script>
   </body>
