--- a/gamming_laptops.html
+++ b/gamming_laptops.html
@@ -7,7 +7,11 @@
     <title>SUGGESTMEE : Best Gamming Laptops</title>
 
     <!---icon image-->
-    <link rel="suggestmee-icon" href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.ico"
+    />
 
     <!----META----------->
     <meta name = "keywords" content = "best laptops,2022,programming laptops,gaming laptops,basic purpose laptops,core i5,i3,i7,Ram,USB Type-C,Higher-Resolution Screens,OLED Displays,Nvidia Graphics,display full hd, daily use, Laptops, Dell XPS Alienware,Lenovo ThinkPad X1 Carbon Gen 9 (2022),HP Spectre, Dell Inspiron, Dell Precision, Lenovo IdeaPad" />
@@ -62,14 +66,14 @@
       <div class="row">
         <div class="col-2">
           <img
-            src="./images/dell i5 g/gallery-1.jpg"
+            src="./images/I7/gallery-1.jpg"
             width="100%"
             id="productImg"
           />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/dell i5 g/gallery-1.jpg"
+                src="./images/I7/gallery-1.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -77,7 +81,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/dell i5 g/gallery-2.jpg"
+                src="./images/I7/gallery-2.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -85,7 +89,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/dell i5 g/gallery-3.jpg"
+                src="./images/I7/gallery-3.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -93,7 +97,7 @@
             </div>
             <div class="small-img-col">
               <img
-                src="./images/dell i5 g/gallery-4.jpg"
+                src="./images/I7/gallery-4.jpg"
                 width="100%"
                 alt=""
                 class="smallImg"
@@ -102,26 +106,20 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>G15 Gaming Laptop</h1>
+          <h1>IdeaPad Gaming 3</h1>
           <h3>Product Details</h3>
           <br />
           <p>
-            <p><b>Processor :</b>10th Generation Intel® Core™ i5-10200H (8 MB cache, 4
-              cores, 8 threads, up to 4.10 GHz) </p> 
-            <p><b>Operating System :</b>Windows 10 Home
-              Single Language, English</p> 
-            <p><b>videocard :</b> NVIDIA® GeForce RTX™ 3050, 4 GB GDDR6</p>
-            <p><b>RAM :</b>16 GB, 2 x 8 GB, DDR4, 2933 MHz</p>  
-            <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p> 
-            <p><b>Display :</b> 15.6 inch FHD (1920 x 1080) 120Hz 250 nits
-              WVA Anti- Glare LED Backlit Narrow Border Display</p> 
-            <p><b>MRP :</b>79,990.01</p> 
+            <p><b>Processor :</b> AMD Ryzen™ 7 5800H Processor (8 Cores / 16 Threads, 3.20 GHz, up to 4.40 GHz with Max Boost, 4 MB Cache L2 / 16 MB Cache L3) </p> 
+            <p><b>Operating System :</b> Windows 11 Home 64</p> 
+            <p><b>Graphics :</b> NVIDIA GeForce® RTX™ 3050 4GB GDDR6</p>
+            <p><b>RAM :</b> 16 GB SO-DIMM DDR4 3200MHz</p>  
+            <p><b>Storage :</b> 512 GB M.2 2280 SSD</p> 
+            <p><b>Display :</b> 39.62cms (15.6) FHD (1920 x 1080), IPS, Anti-Glare, Non-Touch, 45% NTSC, 250 Nits, 120Hz</p> 
+            <p><b>MRP :</b> 80,040</p> 
           </p>
           <a
-            href="https://www.dell.com/en-in/shop/gaming-and-games/g15-gaming-laptop/spd/g-series-15-5510-laptop/d560537win9b#features_section
-            " class="btn" target="_blank"
-            >BUY NOW</a
-          >
+            href="https://www.lenovo.com/in/en/laptops/ideapad/ideapad-gaming-laptops/Gaming-3-Gen-6-15-AMD/p/82K200X3IN" class="btn" target="_blank">BUY NOW</a>
         </div>
       </div>
     </div>
@@ -167,198 +165,87 @@
           </div>
         </div>
         <div class="col-2">
-          <p>Home /</p>
-          <h1>Thinkpad E14 11th Gen (Intel)</h1>
+          
+          <h1>OMEN by HP Laptop </h1>
           <h3>Product Details</h3>
           <br />
-          <p>
-            <b>Processor :</b> AMD Ryzen™ 7 5800H Processor (8 Cores / 16
-            Threads, 3.20 GHz, up to 4.40 GHz with Max Boost, 4 MB Cache L2 / 16
-            MB Cache L3)
-          </p>
-          <p><b>Operating System :</b> Windows 11 Home 64</p>
-          <p>
-            <b>Display Type :</b> 39.62cms (15.6) WQHD (2560x1440) IPS 300nits
-            Anti-glare 165Hz 100% sRGB Dolby Vision Free-Sync G-Sync DC Dimmer
-          </p>
-          <p><b>RAM :</b> 8 GB SO-DIMM DDR4 3200MHz</p>
-          <p><b>Hard Drive :</b> 1 TB M.2 2280 SSD</p>
-          <p><b>MRP :</b> 108990</p>
+          <p><b>Processor :</b> 12th Generation Intel® Core™ i7 processor </p>
+          <p><b>Operating System :</b> Windows 11 Home 64</p> 
+          <p><b>Graphics :</b> NVIDIA® GeForce RTX™ 3060 Laptop GPU (6 GB GDDR6 dedicated)</p>
+          <p><b>RAM :</b> 16 GB DDR5-4800 MHz RAM (2 x 8 GB)</p>
+          <p><b>Storage :</b> 1 TB PCIe® NVMe™ TLC M.2 SSD</p>
+          <p><b>Display :</b> 40.9 cm (16.1") diagonal, FHD (1920 x 1080), 144 Hz, 7 ms response time, IPS, micro-edge, anti-glare, Low Blue Light, 300 nits, 100% sRGB</p>
+          <p><b>MRP :</b> 145,999</p>
           <a
-            href="https://www.lenovo.com/in/en/laptops/legion-laptops/legion-5-series/Legion-5-15ACH6H/p/88GMY501582?r"
+            href="https://www.hp.com/in-en/shop/omen-by-hp-laptop-16-b1361tx-68u27pa.html"
             class="btn" target="_blank"
             >BUY NOW</a
           >
         </div>
       </div>
     </div>
-    <!-- -----single products details 3 ----- --><!-----
+    <!-- -----single products details 3 ----- -->
+
     <div class="small-container single-details">
       <div class="row">
         <div class="col-2">
-          <img src="./images/gallery-1.jpg" width="100%" id="productImg" />
+          <img src="./images/I7/gallery-9.jpg" width="100%" id="productImg3" />
           <div class="small-img-row">
             <div class="small-img-col">
               <img
-                src="./images/gallery-1.jpg"
+                src="./images/I7/gallery-9.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg3"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/gallery-2.jpg"
+                src="./images/I7/gallery-10.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg3"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/gallery-3.jpg"
+                src="./images/I7/gallery-11.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg3"
               />
             </div>
             <div class="small-img-col">
               <img
-                src="./images/gallery-4.jpg"
+                src="./images/I7/gallery-12.jpg"
                 width="100%"
                 alt=""
-                class="smallImg"
+                class="smallImg3"
               />
             </div>
           </div>
         </div>
         <div class="col-2">
-          <p>Home /</p>
-          <h1>Red Printed T-shirt by HRX</h1>
-          <h3>Product Details <i class="fa fa-indent"></i></h3>
+          <h1>ALIENWARE M15 R6</h1>
+          <h3>Product Details</h3>
           <br />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            nesciunt quae consequuntur, et ea quo, ad in minima aliquam vel vero
-            nulla repudiandae dicta, unde quia quibusdam distinctio possimus
-            enim reprehenderit numquam porro delectus! Earum!
-          </p>
+          <p><b>Processor :</b> 11th Gen Intel® Core™ i7-11800H (24 MB cache, 8 cores, 16 threads, up to 4.60 GHz Turbo)</p>
+          <p><b>Operating System :</b> Windows 11 Home Single Language, English </p>
+          <p><b>Graphics :</b> NVIDIA® GeForce RTX™ 3080, 8 GB GDDR6</p>
+         
+          <p><b>RAM :</b> 32 GB, DDR4, 3200 MHz</p>
+          <p><b>Storage :</b> 1 TB, M.2, PCIe, SSD</p>
+          <p><b>Display :</b> 15.6", QHD 2560x1440, 240Hz, Non-Touch, 2ms, Advanced Optimus, CV+, NVIDIA G-SYNC </p>
+          <p><b>MRP :</b> 2,39,989</p>
+          <a
+            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/alienware-m15-r6-gaming-laptop/spd/alienware-m15-r6-laptop/icc-c780005win8"
+            class="btn"
+            target="_blank"
+            >BUY NOW</a
+          >
         </div>
       </div>
-    </div>------>
-    <!-- -----title----- -->
-    <!--------
-    <div class="small-container">
-        <div class="row row-2">
-            <h2>Releted Products</h2>
-            <p>View More</p>
-        </div>
-    </div>
-
-    <section>
-        <div class="small-container">
-            <div class="row">
-                <div class="col-4">
-                    <img src="./images/product-5.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-6.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-7.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-8.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <img src="./images/product-1.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-2.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-3.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-4.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-            </div>
-        </div>
-    </section> ------------->
+    </div>    
 
     <!-- footer -->
 
@@ -375,7 +262,7 @@
               </div>
             </div>------->
             <div class="footer-col-2">
-              <img src="./images/logo.png" alt="" />
+              <a href="/"><img src="./images/logo.png" alt="" /></a>
               <p>Make your buying decision with us</p>
             </div>
             <!---<div class="footer-col-4">
@@ -441,6 +328,23 @@
       };
       smallImg2[3].onclick = function () {
         productImg2.src = smallImg2[3].src;
+      };
+    </script>
+    <script>
+      var productImg3 = document.getElementById("productImg3");
+      var smallImg3 = document.getElementsByClassName("smallImg3");
+
+      smallImg3[0].onclick = function () {
+        productImg3.src = smallImg3[0].src;
+      };
+      smallImg3[1].onclick = function () {
+        productImg3.src = smallImg3[1].src;
+      };
+      smallImg3[2].onclick = function () {
+        productImg3.src = smallImg3[2].src;
+      };
+      smallImg3[3].onclick = function () {
+        productImg3.src = smallImg3[3].src;
       };
     </script>
   </body>
