--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>SUGGESTMEE : Electronic Appliance Advice</title>
     <!---icon image-->
     <link
-      rel="suggestmee-icon"
-      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.png"
+      rel="icon"
+      type="image/x-icon"
+      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.ico"
     />
     <!---Meta Tags-->
     <meta
@@ -124,7 +125,7 @@
               </div>
             </div>------>
             <div class="footer-col-2">
-              <img src="./images/logo.png" alt="" />
+              <a href="/"><img src="./images/logo.png" alt="" /></a>
               <p>Make your buying decision with us</p>
             </div>
             <!----<div class="footer-col-3">
