--- a/programming_laptops.html
+++ b/programming_laptops.html
@@ -7,8 +7,9 @@
     <title>SUGGESTMEE : Best Programming Laptops</title>
     <!---icon image-->
     <link
-      rel="suggestmee-icon"
-      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.png"
+      rel="icon"
+      type="image/x-icon"
+      href="https://raw.githubusercontent.com/suggestmee/suggestmee.github.io/main/images/fevicon_logo.ico"
     />
 
     <!---META-------->
@@ -115,27 +116,27 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>Inspiron 14 Laptop</h1>
+          <h1>Inspiron 15 Laptop</h1>
           <h3>Product Details</h3>
           <br />
           <p>
-            <b>Processor :</b> 11th Generation Intel® Core™ i5-11320H (8 MB
-            cache, 4 cores, 8 threads, up to 4.50 GHz)
+            <b>Processor :</b> 11th Gen Intel® Core™ i5-11320H (8 MB cache, 4
+            cores, 8 threads, up to 4.50 GHz Turbo)
           </p>
           <p>
             <b>Operating System</b> Windows 11 Home Single Language, English
           </p>
-          <p><b>videocard :</b> Intel® Iris® Xe Graphics</p>
-          <p><b>RAM :</b>8 GB, 2 x 4 GB, DDR4, 3200 MHz</p>
+          <p><b>graphics :</b> Intel® Iris® Xe Graphics</p>
+          <p><b>RAM :</b> 16 GB, 2 x 8 GB, DDR4, 3200 MHz</p>
           <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p>
           <p>
-            <b>Display :</b>14.0-inch FHD (1920 x 1080) Anti-Glare LED Backlit
-            Non-Touch Narrow Border WVA Display
+            <b>Display :</b> 15.6", FHD 1920x1080, 60Hz, Non-Touch, AG, WVA,
+            LED-Backlit, Narrow Border
           </p>
-          <p><b>MRP :</b>62490</p>
+          <p><b>MRP :</b> 68,989</p>
 
           <a
-            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-14-laptop/spd/inspiron-14-5410-laptop/bts-icc-c782512win8"
+            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-15-laptop/spd/inspiron-15-5510-laptop/bts-icc-c783511win8"
             class="btn"
             target="_blank"
             >BUY NOW</a
@@ -196,13 +197,14 @@
             MB Cache)
           </p>
           <p><b>Operating System :</b> Windows 11 Home 64</p>
+          <p><b>Graphics :</b> Integrated Intel® Iris® Xe Graphics</p>
+          <p><b>RAM :</b> 16 GB Soldered DDR4 3200MHz</p>
+          <p><b>Storage :</b> 512 GB M.2 2280 SSD</p>
           <p>
-            <b>Display Type :</b> 39.62cms (15.6) FHD (1920x1080) IPS 300nits
+            <b>Display :</b> 39.62cms (15.6) FHD (1920x1080) IPS 300nits
             Anti-glare 45% NTSC
           </p>
-          <p><b>RAM :</b> 16 GB Soldered DDR4 3200MHz</p>
-          <p><b>Hard Drive :</b> 512 GB M.2 2280 SSD</p>
-          <p><b>MRP :</b> 64490</p>
+          <p><b>MRP :</b> 63,990</p>
           <a
             href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-5i-15IIL05/p/88IPS501391"
             class="btn"
@@ -256,13 +258,13 @@
           <h1>HP Pavilion Laptop 14-dv1002TU</h1>
           <h3>Product Details</h3>
           <br />
-          <p><b>Processor : </b>11th Generation Intel® Core™ i5 processor</p>
+          <p><b>Processor : </b> 11th Generation Intel® Core™ i5 processor</p>
           <p><b>Operating System :</b> Windows 11 Home</p>
-          <p><b>Storage : </b>512 GB PCIe® NVMe™ M.2 SSD</p>
+          <p><b>Graphics : </b> Intel Iris Xe</p>
+          <p><b>RAM :</b> 16 GB DDR4-3200 MHz RAM (2 x 8 GB)</p>
+          <p><b>Storage : </b> 512 GB PCIe® NVMe™ M.2 SSD</p>
           <p><b>Display :</b> FHD IPS 35.56 cm (14)</p>
-          <p><b>Graphics : </b>Intel Iris Xe</p>
-          <p><b>RAM :</b> 16GB</p>
-          <p><b>MRP :</b> 67999</p>
+          <p><b>MRP :</b>66,999</p>
 
           <a
             href="https://www.hp.com/in-en/shop/hp-pavilion-laptop-14-dv1002tu-50n48pa.html"
@@ -273,121 +275,8 @@
         </div>
       </div>
     </div>
-    <!-- -----title----- -->
-    <!--------
-    <div class="small-container">
-        <div class="row row-2">
-            <h2>Releted Products</h2>
-            <p>View More</p>
-        </div>
-    </div>
 
-    <section>
-        <div class="small-container">
-            <div class="row">
-                <div class="col-4">
-                    <img src="./images/product-5.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-6.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-7.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-8.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <img src="./images/product-1.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-2.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-3.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-                <div class="col-4">
-                    <img src="./images/product-4.jpg" alt="" />
-                    <h4>Red Printed T-shirt</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="far fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                    <p>$50.00</p>
-                </div>
-            </div>
-        </div>
-    </section> ------------->
-
-    <!-- footer -->
+    <!---- footer --------------------->
 
     <footer>
       <div class="footer">
@@ -402,7 +291,7 @@
               </div>
             </div>------->
             <div class="footer-col-2">
-              <img src="./images/logo.png" alt="" />
+              <a href="/"><img src="./images/logo.png" alt="" /></a>
               <p>Make your buying decision with us</p>
             </div>
             <!---<div class="footer-col-4">
