--- a/programming_laptops.html
+++ b/programming_laptops.html
@@ -59,6 +59,13 @@
           <ul id="menuItems">
             <li><a href="/">Home</a></li>
             <li>
+              <a
+                href="https://www.facebook.com/SuggestMee-106460971998723/"
+                target="_blank"
+                >Follow Us</a
+              >
+            </li>
+            <li>
               <a href="mailto:suggestme60@gmail.com?" target="_blank"
                 >Contact Us</a
               >
