--- a/index.html
+++ b/index.html
@@ -48,52 +48,49 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="navbar">
-          <div class="logo">
-            <a href="/"
-              ><img src="./images/logo.png" alt="suggestmee logo" width="125px"
-            /></a>
-          </div>
-          <nav>
-            <ul id="menuItems">
-              <li><a href="/">Home</a></li>
-              <li>
-                <a
-                  href="https://www.facebook.com/SuggestMee-106460971998723/"
-                  target="_blank"
-                  >Follow Us</a
-                >
-              </li>
-              <li>
-                <a href="mailto:suggestme60@gmail.com?" target="_blank"
-                  >Contact Us</a
-                >
-              </li>
-            </ul>
-          </nav>
-          <img
-            src="./images/menu.png"
-            class="menu-icon"
-            onclick="menutoggle()"
-            alt="menu logo"
-          />
+      <div class="navbar">
+        <div class="logo">
+          <a href="/"
+            ><img src="./images/logo.png" alt="suggestmee logo" width="125px"
+          /></a>
         </div>
+        <nav>
+          <ul id="menuItems">
+            <li><a href="/">Home</a></li>
+            <li>
+              <a
+                href="https://www.facebook.com/SuggestMee-106460971998723/"
+                target="_blank"
+                >Follow Us</a
+              >
+            </li>
+            <li>
+              <a href="mailto:suggestme60@gmail.com?" target="_blank"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <img
+          src="./images/menu.png"
+          class="menu-icon"
+          onclick="menutoggle()"
+          alt="menu logo"
+        />
+      </div>
+      <div class="container home-page-image-container">
         <div class="row">
-          <div class="col-2">
+          <div class="home-page-text-container">
             <p>A SELECTION OF THE BEST</p>
             <h1>LAPTOP JUST FOR YOU</h1>
-          </div>
-          <div class="col-2">
-            <img src="./images/image1.jpg" alt="" />
           </div>
         </div>
       </div>
     </header>
 
-    <section>
+    <section style="padding-top: 40px">
       <div class="small-container">
-        <h2 class="title">Featured Products</h2>
+        <h2 class="title" style="margin-bottom: 40px">Featured Products</h2>
         <div class="row">
           <div class="col-4">
             <a href="basic_use_laptops.html">
